--- a/cloud-provider-payment-8001/src/main/resources/application.yml
+++ b/cloud-provider-payment-8001/src/main/resources/application.yml
@@ -2,14 +2,15 @@ server:
   port: 8001
 
 spring:
-  application:
-    name: cloud-payment-service
   datasource:
-    type: com.alibaba.druid.pool.DruidDataSource
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
-    username: root
-    password: 123456
+    druid:
+      url: jdbc:mysql://127.0.0.1:3306/db2019?useUnicode=true&characterEncoding=utf-8&useSSL=false
+      username: root
+      password: 123456
+      max-active: 40
+      min-idle: 2
+      driver-class-name: com.mysql.cj.jdbc.Driver
+      db-type: com.alibaba.druid.pool.DruidDataSource
 
 
 mybatis:
